youfull/objects/Calendar__c.object
<CustomObject>
    <fields>
        <fullName>CMPGN_END_DT__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR_FRMTD__c</fullName>
        <description>Formatted CMPGN_NR_TXT, format &apos;2012-01&apos;</description>
        <formula>LEFT(CMPGN_NR_TXT__c,4) + &apos;-&apos; + RIGHT(CMPGN_NR_TXT__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formatted CMPGN_NR_TXT, format &apos;2012-01&apos;</inlineHelpText>
        <label>CMPGN_NR_FRMTD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR_TXT__c</fullName>
        <description>CMPGN_NR__c converted to text</description>
        <formula>TEXT(CMPGN_NR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CMPGN_NR__c converted to text</inlineHelpText>
        <label>CMPGN_NR_TXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR__c</fullName>
        <label>Campaign Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPGN_STRT_DT__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CURRNT_IND__c</fullName>
        <label>Current indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Key__c</fullName>
        <externalId>true</externalId>
        <label>Calendar Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>Market ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Calendar</relationshipLabel>
        <relationshipName>Calendar</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PRIOR_CMPGN_NR__c</fullName>
        <label>PRIOR_CMPGN_NR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_CMPGN_NR__c</fullName>
        <label>SPPY Campaign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEAR_NR__c</fullName>
        <label>Year Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>CMPGN_NR__c</columns>
        <columns>PRIOR_CMPGN_NR__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>MRKT_ID__c</columns>
        <columns>CURRNT_IND__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>